# radcli

./: .gitignore  .packit.yaml  .travis.yml  AGENTS.md  COPYRIGHT  Makefile.am  NEWS  README.md  README.rst  configure.ac  index.html  params.json  release.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  tests.yaml
contrib/ai/personas/: radcli-contributor.md  radcli-core-dev.md
devel/: ABI-x86_64.dump
doc/: ChangeLog  Doxyfile.in  Makefile.am  doc.mk  radius-test-server.md
doc/man/: radcli.h.3  rc_aaa.3  rc_aaa_ctx.3  rc_aaa_ctx_free.3  rc_aaa_ctx_get_secret.3  rc_aaa_ctx_get_vector.3  rc_aaa_ctx_server.3  rc_acct.3  rc_acct_proxy.3  rc_add_config.3  rc_apply_config.3  rc_auth.3  rc_auth_proxy.3  rc_avpair_add.3  rc_avpair_assign.3  rc_avpair_copy.3  rc_avpair_free.3  rc_avpair_gen.3  rc_avpair_get.3  rc_avpair_get_attr.3  rc_avpair_get_in6.3  rc_avpair_get_raw.3  rc_avpair_get_str.3  rc_avpair_get_uint32.3  rc_avpair_insert.3  rc_avpair_log.3  rc_avpair_new.3  rc_avpair_next.3  rc_avpair_parse.3  rc_avpair_readin.3  rc_avpair_remove.3  rc_avpair_tostr.3  rc_buildreq.3  rc_check.3  rc_check_tls.3  rc_conf_int.3  rc_conf_srv.3  rc_conf_str.3  rc_config_free.3  rc_config_init.3  (+33 more)
doc/scripts/: fix-seealso.pl  gen-radcli-h-man.pl
doc/web/: index.html
etc/: Makefile.am  dictionary  dictionary.ascend  dictionary.compat  dictionary.sip  radiusclient-tls.conf.in  radiusclient.conf.in  servers
fedora/: radcli.spec
include/: includes.h
include/radcli/: radcli.h
lib/: Makefile.am  avpair.c  buildreq.c  config.c  dict.c  gen-dict.awk  hmac.c  hmac.h  ip_util.c  log.c  multihandle.c  nettle-hmac.c  options.h  radcli.map.in  radcli.pc.in  rc-hmac.h  sendserver.c  sendserver_async.c  sendserver_util.c  sendserver_util.h  tls.c  tls.h  util.c  util.h
manual/: aaa__ctx_8c_source.html  annotated.html  avpair_8c_source.html  buildreq_8c_source.html  classes.html  config_8c_source.html  deprecated.html  dict_8c_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e0a38cf60ad9af2b75514b5d090797e1.html  doxygen_crawl.html  examples.html  files.html  freeradius-client_8h_source.html  functions.html  functions_vars.html  group__misc-api.html  group__radcli-api.html  group__tls-api.html  hmac_8c_source.html  index.html  ip__util_8c_source.html  log_8c_source.html  md5_8c_source.html  menudata.js  modules.html  nettle-hmac_8c_source.html  pages.html  radcli_8h_source.html  radexample_8c-example.html  radexample_8c_source.html  radiusclient-ng_8h_source.html  radiusclient-tls_8conf-example.html  radiusclient_8conf-example.html  rc-md5_8c_source.html  sendserver_8c_source.html  servers-example.html  servers-tls-example.html  (+10 more)
manual/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  pages_0.js  pages_2.js  pages_4.js  pages_6.js  pages_8.js  pages_9.js  pages_a.js  pages_b.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  (+4 more)
src/: Makefile.am  common.c  radchallenge.c  radembedded.c  radembedded_async.c  radembedded_dict.c  radexample.c  radius.c  radiusclient.c
tests/: Makefile.am  avpair.c  basic-tests.sh  close-notify-server.c  close-notify-tests.sh  common.sh  dict-add.c  dict.c  eap-tests.sh  failover-tests.sh  ipv6-non-temp-addr-tests.sh  ipv6-tests.sh  malformed-packet-tests.sh  msg-auth-tests.sh  namespace-tests.sh  no-server-file-tests.sh  ns.sh  pack.c  radembedded-dict-tests.sh  radembedded-tests.sh  radius-server.py  radiusclient-ipv6.conf  radiusclient.conf  reject-tests.sh  run-server.sh  skip-unknown-vsa.sh  source-intf-ipv4-ipv6-tests.sh  tcp-tests.sh  tls-idle-restart-tests.sh  tls-idle-restart.c  tls-restart.c  tls-tests.sh
tests/dictionaries/: dictionary.microsoft  dictionary.roaringpenguin
tests/docker/: Dockerfile-radius  freeradius-users  radius-clients.conf  tcp.conf
tests/dtls/: radiusclient-tls.conf
tests/raddb/: radiusd.conf  users
tests/raddb-tcp/: access_challenge  access_reject  accounting_response  acct_users  ca.pem  cert-rsa.pem  clients.conf  key-rsa.pem  radiusd.conf  users
tests/raddb/mods-enabled/: eap
tests/raddb/sites-enabled/: tls
